--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,9 @@
  *,
  *::after,
  *::before {
-   margin: 0;
+   /*margin: 0;
    padding: 0;
-   box-sizing: border-box;
+   box-sizing: border-box;*/
    font-family: manga;
    font-size: 20px;
 
